# auction-house-rs

./: README.md
backend/: .gitignore  .terraform.lock.hcl  Cargo.toml  CargoLambda.toml  Makefile  README.md  main.tf
backend/src/: constants.rs  errors.rs  main.rs  state.rs  utils.rs
backend/src/middlewares/: auth.rs  mod.rs
backend/src/models/: auth.rs  bid.rs  buyer.rs  item.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  buyer.rs  item.rs  mod.rs  seller.rs
backend/src/tests/: auth.rs  item.rs  mod.rs  seller.rs
