[package]
name = "auction-house-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }
ulid = { version = "1.1.3", features = ["serde"] }
utoipa-axum = "0.1.2"
utoipa = "5.2.0"
jsonwebtoken = "9.3.0"
bcrypt = { version = "0.16.0", features = ["getrandom"] }
aws-sdk-dynamodb = "1.55.0"
aws-sdk-s3 = "1.65.0"
aws-config = "1.5.10"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
rand_xoshiro = "0.6.0"
sha3 = "0.10.8"
base64 = "0.22.1"
